fix background scaling on mobile layouts

--- a/static/style/style.css
+++ b/static/style/style.css
@@ -166,7 +166,6 @@ body {
 	margin: 20px;
 	background-repeat: no-repeat;
 	background-position: center;
-	background-size: contain;
 	border: 1px solid var(--color-border);
 	box-shadow: 0 0 20px black;
 }
